For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2023-03-20:

- Fixed incorrect result of array slicing ${array[@]:offset:length} where
  'length' is a nested expansion involving an array. For example,
  ${array[@]:0:${#array[@]}} is now correctly equivalent to ${array[@]}.

2023-03-19:

- Fixed a crash in 'read' (as well as a spurious error in 'printf -v', added
  on 2021-11-18) when using an indexed array subscript with an arithmetic
  expression that yields 0 while also modifying the variable. For example,
  'i=-1; read a[i+=1]' crashed. Bug introduced in ksh 93s+ 2008-01-31.

- In the 'read' built-in, a '=' in a variable name argument is now once
  again an error and is no longer misparsed as an assignment, which caused
  inconsistent behaviour or (in the case of 'read -C foo=bar') a crash. This
  fixes a bug introduced in ksh 93u+ 2011-04-28.

2023-03-17:

- Fixed nameref self-reference loop detection; as of ksh 93u 2010-11-22, this
  failed for loops of more than two refs. For example, 'nameref a=b b=c c=a'
  now correctly outputs an 'invalid self reference' error message.

2023-03-16:

- Backported a fix from ksh 93v- beta for a bug in the 'for' loop optimizer
  which could falsely treat 'typeset -b' variables as loop invariants.

2023-03-04:

- Fixed a bug introduced on 2022-02-08 that caused string translation using
  $"..." to either crash or fail silently.

2023-03-03:

- A new SHOPT_SCRIPTONLY compile-time option was added that, if enabled,
  compiles out the interactive shell, resulting in a ksh binary that can
  only run scripts. See src/cmd/ksh93/README for more information.

2023-02-23:

- Fixed a crash or corrupted output that occurred on some systems if the vi
  '.' repeater command was used immediately after starting ksh in vi mode.

- In vi mode, when navigating back in the command history and then editing a